# gdpr-agent

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  config.py  pyproject.toml
docs/: phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md  phases-overview.md
phase1/: chain.py  ingest.py  main.py
phase2/: adk_agent.py  graph.py  main.py  tools.py
phase3/: callbacks.py  eval_dataset.py  eval_runner.py  main.py  traced_agent.py
phase4/: __init__.py  benchmarks.py  main.py  serving.py
phase4/k8s/: deployment.yaml  hpa.yaml  namespace.yaml  service.yaml
phase5/: __init__.py  dataset.py  evaluate.py  jax_train.py  main.py  merge_adapter.py  tpu_job.py  train.py  train_local.py  vertex_job.py
phase6/: gdpr_pipeline.yaml  kms.py  main.py  pipeline.py  submit.py  vpc_sc.sh
phase6/k8s/: pdb.yaml  vpa.yaml
setup/: create_dataset.py  create_index.py
