[project]
name = "gdpr-agent"
version = "0.1.0"
description = "GDPR Legal Analyst Agent — incremental GCP AI/ML learning project"
requires-python = ">=3.11"
dependencies = [
    # LangChain core + GCP integrations
    "langchain>=0.3",
    "langchain-text-splitters>=0.3",
    "langchain-google-vertexai>=2.0",
    "langchain-google-community[bigquery]>=2.0",
    "langchain-community>=0.3",
    # Phase 2 — agentic workflows
    "langgraph>=0.2",
    "ddgs>=9.0",
    "google-adk>=0.3",
    # Phase 4 — self-hosted serving (vLLM endpoint via OpenAI-compatible API)
    "langchain-openai>=0.2",
    # Phase 3 — observability & eval
    "langsmith>=0.1",
    "langfuse>=2.0",
    "pandas>=2.0",
    # GCP SDKs
    "google-cloud-aiplatform>=1.60",
    "google-cloud-bigquery>=3.20",
    # Document loading
    "pypdf>=4.0",
    # Config & CLI
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "pytest>=8.0",
]
# Phase 6 — Vertex AI Pipelines (KFP SDK)
# Install with: pip install -e ".[pipelines]"
pipelines = [
    "kfp>=2.7",
    "google-cloud-pipeline-components>=2.0",
    "google-cloud-resource-manager>=1.12",
]

# Phase 5 — training dependencies (heavy, GPU-only, not needed for inference)
# Install with: pip install -e ".[train]"
train = [
    "peft>=0.10",
    "trl>=0.8",
    "bitsandbytes>=0.43",
    "datasets>=2.18",
    "accelerate>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["phase1", "phase2", "phase3", "phase4", "phase5", "phase6", "setup", "config.py"]
